# fetch_study

./: CMakeLists.txt  package.xml  timed_path_follower_plugin.xml
action/: StatusAction.action
cfg/: PathFollower.cfg
config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  move_base.yaml  move_base_ada.yaml  move_base_lattice.yaml  move_base_new.yaml  move_base_pp.yaml  move_base_study.yaml  move_base_timed.yaml
config/fetch/: costmap_common.yaml  costmap_local.yaml  move_base_ada.yaml
fetch_study/launch/: fetch_nav.launch  follow_waypoints.launch  study_nav.launch
fetch_study/maps/: aims.yaml
fetch_study/scripts/: demo_path.py
include/: static_costmap.h  timed_path_follower.h
launch/: aaron.launch  aaron_pid.launch  better_nav.launch  demo_points.launch  demo_points_slush.py  fetch_nav_ada.launch  head_tilt.launch  pp.launch  setup_first.launch  simple.launch  simple_chained.launch  simple_nav_pp.launch  simple_nav_timed.launch  simple_pp.launch  simple_pts.launch  simple_teb.launch  simple_timed.launch  simple_timed_null.launch  simple_traj.launch  simple_waypts.launch  study_custom.launch  study_nav.launch  study_pid.launch  study_room.launch  sync_check.launch
launch/deprec/: min_nav_depr.launch
launch/include/: move_base.launch.xml  move_base_ada.launch.xml  move_base_pp.launch.xml  move_base_timed.launch.xml  move_base_traj.launch.xml
launch/include/fetch/: costmap_common.yaml  costmap_global.yaml
maps/: 3002_cleaned.pgm  3002_cleaned.yaml  aims-ada.yaml  aims-keepout.pgm  fetchredemo.pgm  fetchredemo.yaml  fetchredemo_ko.pgm  fetchredemo_ko.yaml  nsha-map.yaml  nsha-map2.pgm  nsha-map2.yaml
planner/: timed_path_follower.cpp  timed_path_follower.h
saved_path/: guided_mini.csv  guided_playground.csv  guided_slower.csv  line.csv  small_path2.csv  triangle.csv  waypoints.csv
saved_path/reports/: readme.txt
scripts/: chained_path.py  custom_study_path.py  demo_path.py  follow_waypoints.py  initial_location.py  load_path.py  logger.py  pure_pursuit.py  sync_check.py  synch_check.py  test_tracking.py  waypoint_logger.py  waypoints_all.py  waypoints_log.py  waypoints_pid.py  waypoints_pp.py  waypoints_pp2.py  waypoints_timed.py  waypoints_traj.py
src/: static_costmap.cpp  status_action.cpp  timed_path_follower.cpp
waypoints/: AB-bigger.csv  AB-early.csv  AB-even.csv  AB-late.csv  AB-null.csv  AB-toptwo.csv  AC-bigger.csv  AC-early-obs.csv  AC-early.csv  AC-even.csv  AC-late.csv  AC-null.csv  AC-toptwo.csv  AC_OBS-early.csv  AC_OBS-even-obs.csv  AC_OBS-even.csv  AC_OBS-late-obs.csv  AC_OBS-late.csv  AD-early.csv  AD-even.csv  AD-late.csv  AD-null.csv  AD-toptwo.csv  AE-bigger.csv  AE-early.csv  AE-even.csv  AE-late.csv  AE-null.csv  AE-toptwo.csv  AF-bigger.csv  AF-early.csv  AF-even.csv  AF-late.csv  AF-null.csv  AF-toptwo.csv  AF_OBS-early-obs.csv  AF_OBS-early.csv  AF_OBS-even.csv  AF_OBS-late.csv  BA-early.csv  (+178 more)
waypoints/aimakerspace/: ab-null.csv  ab.csv  ac-null.csv  ac.csv  bc-null.py  ef.csv  new_small_circle.csv  yz.csv
waypoints/paths/: AB-early.csv  AB-even.csv  AB-late.csv  AB-null.csv  AC-even.csv  AC-null.csv  AC_OBS-early.csv  AD-even.csv  AD-late.csv  AD-null.csv  AE-null.csv  AF-even.csv  AF-null.csv  AF_OBS-early.csv  AF_OBS-late.csv  BA-late.csv  BA-null.csv  BC-late.csv  BC-null.csv  BD-even.csv  BD-null.csv  BE-even.csv  BE-null.csv  BF-even.csv  BF-null.csv  CA-null.csv  CA_OBS-early.csv  CA_OBS-even.csv  CB-early.csv  CB-late.csv  CB-null.csv  CD-even.csv  CD-null.csv  CD_OBS-early.csv  CE-null.csv  CF-late.csv  CF-null.csv  DA-late.csv  DA-null.csv  DB-even.csv  (+36 more)
waypoints/study_paths/: lengths.csv
